--- a/src/components/VideoHeader.css
+++ b/src/components/VideoHeader.css
@@ -1,6 +1,6 @@
 .yt-video-container{
   width: 100vw;
-  height: 100vh;
+  height: calc(75vh - 78.39px);
 }
     
 .yt-iframe {
@@ -8,6 +8,6 @@
   top: 50%;
   left: 50%;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   transform: translate(-50%, -50%);
 }
